# sha3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench.sh  codex.md
cmake/: sha3Config.cmake.in
examples/: hash_example.c  sha3_merkle_benchmark.c  sha3_parallel_benchmark.c  shake_example.c
include/: sha3.h
src/: merkle.c  sha3.c  sha3_avx512_batch.c  sha3_parallel.c
tests/: test_sha3.c
